# little-walk-dog

./: .env  Cargo.toml
curl/breed/: create-breed.curl  create-breed.json  query-breeds.curl
curl/dog/: create-dog.curl  create-dog.json
src/: lib.rs  main.rs
src/core/: entities.rs  error.rs  mod.rs  repository.rs  service.rs
src/core/entities/: breed.rs  dog.rs  mod.rs
src/handlers/: breed.rs  common.rs  dog.rs  mod.rs
src/middlewares/: mod.rs  response_encoding.rs
src/repositories/: mod.rs  mongodb.rs  postgres.rs  surrealdb.rs
